--- a/TodoApp/todo/templates/todo_detail.html
+++ b/TodoApp/todo/templates/todo_detail.html
@@ -2,21 +2,31 @@
 {% block content %}
     <h1>{{ todo.title }}</h1>
 
-    {% if request.user == todo.author %}
+    {% if request.user == todo.author or request.user.is_superuser %}
         <div style="text-align: right">
-            <a href="{% url 'todo_update' todo.pk %}">수정</a>
-            <form action="{% url 'todo_delete' todo.pk %}" method="post" style="display: inline">
+            <small>작성자 - </small>{{ todo.author.username }} |
+            <a href="{% url 'todo:update' todo.pk %}">수정</a>
+            <form id="delete_form"
+                  action="{% url 'todo:delete' todo.pk %}"
+                  method="post" style="display: inline">
                 {% csrf_token %}
-                <button>삭제</button>
+                <button id="delete_btn">삭제</button>
             </form>
         </div>
     {% endif %}
-
-    <div style="text-align: right">
-        {{ todo.author.username }}
-    </div>
     <hr>
     <p>{{ todo.detail }}</p>
     <br>
-    <a href="{% url 'todo_list' %}"> 목록으로 돌아가기</a>
+    <a href="{% url 'todo:list' %}"> 목록으로 돌아가기</a>
+{% endblock %}
+
+{% block js %}
+    <script>
+        document.querySelector('#delete_btn').addEventListener('click', function (e) {
+        e.preventDefault();
+        if (confirm('삭제하시겠습니까?')) {
+            document.querySelector('#delete_form').submit();
+        }
+        });
+    </script>
 {% endblock %}
